MAYBE FINAL - NOT FULL FINAL

--- a/main_style_front.css
+++ b/main_style_front.css
@@ -1,6 +1,6 @@
-/* Style für HTML-Wiki der 9-3
+/* Style fuer HTML-Wiki der 9-3
 
-        Author: Elias Müller */
+        Author: Elias Mueller */
 
 *{
     font-family: Arial, Helvetica, sans-serif;
@@ -145,9 +145,9 @@ h3{
     text-align: center;
     vertical-align: middle;
     background-size: cover;
-    padding-top: 1%;
-    /*background-image: url(Rot.jpg); */
-    margin-top: 5px;
+    /*padding-top: 1%;
+     background-image: url(Rot.jpg); */
+    margin-top: 20px;
     width: 55%;
     float: right;
 }
@@ -163,6 +163,7 @@ h3{
     text-align: center;
     vertical-align: middle;
     background-size: cover;
+    font-size: 18px;
 }
 
 .navBar_name_sub_a {
@@ -243,12 +244,228 @@ text-align: center;
 .code {
     background-color: lightgray;
     color: black;
+    width: 30%;
+    margin: 0px auto;
+    border: 2px solid;
 }
 
 .syntax {
     color: red;
     font-weight: bold;
 }
+
+.p-center {
+text-align: center;
+}
+
+#maincontent-align-left {
+    background-color: white;
+    height: auto;
+    margin: 1%;
+    text-align: left;
+    line-height: 150%;
+
+}
+
+.abschnittsunterteilung-h3 {
+    padding-left: 5px;
+    text-decoration: underline;
+}
+
+.img_datei_create {
+    width: 1400px;
+    height: 700px;
+}
+
+.improve_h {
+    text-transform: inherit;
+    font-size: 20px;
+    text-align: center;
+}
+
+#submitbtn_form {
+    padding: 7px;
+
+}
+
+#contactform_message {
+    width: 350px;
+    height: 80px;
+}
+
+#gdh {
+    text-align: center;
+}
+
+#headerinfo {
+    text-align: left;
+    margin-left: 20px;
+}
+
+#bodyinfo {
+    margin-right: 20px;
+    text-align: right;
+}
+
+.attention {
+    font-weight: 100;
+    color: orange;
+}
+
+.site-nav-ol {
+    text-decoration: none;
+    float: left;
+    text-align: left;
+}
+
+.site-nav-ol li a {
+    text-decoration: none;
+}
+
+.site-nav-ol li a:visited {
+    text-decoration: none;
+    color: blue;
+}
+
+.site-nav {
+    margin: 0px auto;
+}
+
+.befehlsdarstellung {
+    width: 100%;
+    border: 0;
+    margin: 0;
+    padding: 0;
+    border-collapse:collapse;
+    border-left: 2px solid #4D4D4D;
+    border-right: 2px solid #4D4D4D;
+    border-bottom: 2px solid #4D4D4D;
+    margin-bottom: 20px;    
+}
+
+.befehlsdarstellung thead {
+    border-top : 4px solid #FF7F00;
+    background-color: #4D4D4D !important;
+    color: white;
+    text-align: right;
+    font-size: 16pt;
+}
+
+#bereich_textstruktur thead {
+    border-top : 4px solid #CCCC00;
+}
+
+#bereich_textstellen thead {
+    border-top : 4px solid #00E500;
+}
+
+#bereich_links thead {
+    border-top : 4px solid #00A9FF;
+}
+
+#bereich_auszaehlungen thead {
+    border-top : 4px solid #0000FF;
+}
+
+#bereich_div_span thead {
+    border-top : 4px solid #D400FF;
+}
+
+#bereich_farben thead {
+    border-top : 4px solid #FF0000;
+}
+
+#bereich_sonstiges thead {
+    border-top : 4px solid #7F7F7F;
+}
+
+#bereiche_html5 {
+    border-top : 4px solid orange;
+}
+
+
+
+
+.befehlsdarstellung thead tr {
+    background-color: #4D4D4D;
+}    
+.befehlsdarstellung .spaltenbes {
+    background-color: #CFCFCF;
+    text-align: left;
+    color: black;
+    font-weight: normal;
+    font-size: 10pt;
+}
+
+.befehlsdarstellung th {
+    padding-right: 6px;
+    padding-left: 6px;
+}
+
+.befehlsdarstellung td {
+    padding-right: 6px;
+    padding-left: 6px;
+}
+
+tr:nth-child(2n+2) {
+  background-color: #f6f6f6;
+}
+
+tr:nth-child(2n+1) {
+  background-color: #eee;
+}
+
+.befehlsdarstellung tbody tr td {
+    font-family: 'Source Code Pro', sans-serif;
+    vertical-align: top;
+    padding-top: 5px;
+}
+
+.befehlsdarstellung tbody tr td+td {
+    border-left: 3px solid white;
+    font-family: Arial, sans-serif;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.quellcode_einr1 {
+    text-indent:1em;
+} 
+
+.quellcode_einr2 {
+    text-indent:2em;
+}
+
+.befehlsdarstellung tbody tr:hover {
+    background-color: yellow;
+}
+  
+table a {
+  text-decoration: none;
+}
+  
+table a:hover {
+  text-decoration: underline;
+}
+
+.tabelle_hervorhebung {
+    color: white;
+    background-color: #00ab00;
+   }
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
